working on sound, synth version with gridlib

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,16 @@ h1 {
   display: block;
   color: antiquewhite;
 }
+
+#preview {
+  position: fixed;
+  top:0;
+  left:0;
+  height: 100%;
+  width: 100%; 
+  z-index: -1;
+}
+
 /* #code {
 
 } */
