--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,12 @@ h1 {
   column-gap: 1rem;
 }
 
-#controls > .disabled {
+.hidden {
+  display: none;
+}
+
+
+.disabled {
   color: #666;
   background-color: #1a1a1a;
   border: 0;
